FileProviderService: Fix bug involving incorrect file content